# semaphore-rs

./: .gitignore  AGENTS.md  Cargo.toml
circuits/src/: semaphore.circom
docs/: COFACTOR_CLEARING_REPORT.md  decaf-ristretto-and-semaphore-cardano.md  idea-nullifiers.aux  idea-nullifiers.out  idea-nullifiers.tex  poc-composition-report.md  semaphore-cardano.aux  semaphore-cardano.out  semaphore-cardano.tex  semaphore_bls12_381_work_package.odt
src/: baby_jubjub.rs  group.rs  identity.rs  proof.rs  utils.rs  witness.rs
