[package]
name = "semaphore-protocol"
version = "0.1.0"
edition = "2024"
description = "Semaphore Rust Implementation"
license = "MIT"
repository = "https://github.com/semaphore-protocol/semaphore-rs"
keywords = ["semaphore", "zk", "zero-knowledge", "proof", "cryptography"]
categories = ["cryptography"]
documentation = "https://semaphore.pse.dev/"
readme = "README.md"

[lib]
name = "semaphore"

[[bin]]
name = "identity_signature_low_order_forgery"
path = "bin/identity_signature_low_order_forgery.rs"

[[bin]]
name = "semaphore_zero_secret_membership"
path = "bin/semaphore_zero_secret_membership.rs"

[dependencies]
blake = "2.0.2"
light-poseidon = "0.4.0"
num-bigint = "0.4.6"
thiserror = "2.0.18"
num-traits = "0.2.19"
ethers-core = "2.0.14"
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["blocking"] }
openssl = { version = "0.10.76", features = ["vendored"] }

# arkworks
ark-ec = { version = "=0.5.0", default-features = false }
ark-ed-on-bn254 = { version = "=0.5.0", default-features = false }
ark-ff = { version = "=0.5.0", default-features = false }

# zk-kit
zk-kit-lean-imt = "0.1.1"

# serde
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.149"

# circom-prover
circom-prover = { version = "0.1.4", features = ["circom-witnesscalc"] }

[features]
default = []
serde = ["dep:serde", "zk-kit-lean-imt/serde"]
